--- a/app/views/pages/consulta_est.html.erb
+++ b/app/views/pages/consulta_est.html.erb
@@ -49,7 +49,7 @@ Se puede acudir a citas individuales aunque se recomienda hacer un
 tratamiento personalizado de más sesiones (hasta 10) por el efecto
 acumulativo de esta terapia y para alcanzar los resultados deseados.</p><br>
 <br>
-</table>
+<!-- </table>
 <table class="table">
       <thead>
         <tr>
@@ -71,7 +71,7 @@ acumulativo de esta terapia y para alcanzar los resultados deseados.</p><br>
           <td>50 Euros</td>
         </tr>
       <tbody>
-</table>
+</table> -->
 
 <h2>Las Agujas y la Sensación</h2>
 <p>
