--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -23,7 +23,9 @@ una sesión, sobre todo a nivel de dolor ya que uno de los mecanismos
 del funcionamiento de la acupuntura es a través de sus propiedades
 sedantes y la liberación de endorfinas.</p>
 
-<!-- </table>
+<h2>Precios</h2>
+
+</table>
 <table class="table">
       <thead>
         <tr>
@@ -42,7 +44,7 @@ sedantes y la liberación de endorfinas.</p>
 
         </tr>
       <tbody>
-</table> -->
+</table>
 
 <h2>Las Agujas y la Sensación</h2>
 <p>
