--- a/app/views/pages/consulta_est.html.erb
+++ b/app/views/pages/consulta_est.html.erb
@@ -49,7 +49,7 @@ Se puede acudir a citas individuales aunque se recomienda hacer un
 tratamiento personalizado de más sesiones (hasta 10) por el efecto
 acumulativo de esta terapia y para alcanzar los resultados deseados.</p><br>
 <br>
-<!-- </table>
+</table>
 <table class="table">
       <thead>
         <tr>
@@ -64,14 +64,18 @@ acumulativo de esta terapia y para alcanzar los resultados deseados.</p><br>
           <td>40 Euros</td>
           <td>-</td>
         </tr>
-
         <tr>
-          <td>Diez sesione</td>
+          <td>Seis sesiones</td>
+          <td>210 Euros</td>
+          <td>30 Euros</td>
+        </tr>
+        <tr>
+          <td>Diez sesiones</td>
           <td>350 Euros</td>
           <td>50 Euros</td>
         </tr>
       <tbody>
-</table> -->
+</table>
 
 <h2>Las Agujas y la Sensación</h2>
 <p>
