--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -28,6 +28,7 @@
 
 <li></li>
 <li></li>
+<li><%= link_to 'Precios', page_path('precios') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
 
 <% if user_signed_in? %>
