--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -26,7 +26,7 @@ sedantes y la liberación de endorfinas.</p>
 <h2>Precios</h2>
 
 </table>
-<table class="table">
+<table class="table table2">
       <thead>
         <tr>
           <th>Tratamiento</th>
@@ -45,7 +45,7 @@ sedantes y la liberación de endorfinas.</p>
         </tr>
       <tbody>
 </table>
-
+<br>
 <h2>Las Agujas y la Sensación</h2>
 <p>
 Existen personas que tienen miedo a las agujas porque están acostumbrados
