--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,5 @@
-<h1>Medicina Funcional</h1><br>
+<h1>Medicina Funcional</h1>
+
 
 <p>El modelo de la Medicina Funcional tiene un enfoque
 individualizado y científico que permite a los pacientes y
@@ -8,7 +9,7 @@ un optimo bienestar. Requiere un entendimiento detallado de
 la genética, bioquímica, y factores de estilo de vida de cada
 individuo y estudia estos datos para movilizar planes de
 tratamiento personalizados que conducen a resultados óptimos.
-<br><br>
+<br><%= image_tag("Pic1.jpg") %><br>
 A diferencia de la medicina convencional, La medicina funcional
 se centra en las raíces de los desordenes y en los factores
 subyacentes que influyen en la salud. Su enfoque es científico
