--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,4 @@
-<br><br><br><h1>Servicios de Nutrición Clínica y Terapia Nutricional,
+<h1>Servicios de Nutrición Clínica y Terapia Nutricional,
    de Acupuntura y Acupuntura Estética Facial
    en la tienda ecológica- Eslaveco del Polígono Pisa</h1>
    <br><br>
