style pics and carousel

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>Medicina Funcional</h1>
-
+<%= image_tag("Pic1.jpg", class:"nutricion3") %>
 
 <p>El modelo de la Medicina Funcional tiene un enfoque
 individualizado y científico que permite a los pacientes y
@@ -9,7 +9,7 @@ un optimo bienestar. Requiere un entendimiento detallado de
 la genética, bioquímica, y factores de estilo de vida de cada
 individuo y estudia estos datos para movilizar planes de
 tratamiento personalizados que conducen a resultados óptimos.
-<br><%= image_tag("Pic1.jpg") %><br>
+<br><br>
 A diferencia de la medicina convencional, La medicina funcional
 se centra en las raíces de los desordenes y en los factores
 subyacentes que influyen en la salud. Su enfoque es científico
