--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -20,9 +20,9 @@ acupuntura es eficaz para el tratamiento de, al menos, 49 desórdenes
 y condiciones, lista que se ha ampliado gracias a la investigación en
 años posteriores. En el 2004, la OMS informó que ha sido demostrado la
 eficacia de la acupuntura, tanto en experimentos de laboratorio como en
-ensayos clínicos.
-Entre las condiciones que se indican en los informes<p>
-figuran:<br><br>
+ensayos clínicos.</p>
+<p>Entre las condiciones que se indican en los informes
+figuran:</p><br><br>
 
 <%=image_tag("sintomas.png", :class => "style_image6") %>
 <br>
@@ -31,4 +31,4 @@ figuran:<br><br>
 de tipo muscular e articular, ya sean de carácter agudo o crónico</b>. También
 tiene buenos resultados con ciertas condiciones como el insomnio, la
 osteoartritis, la infertilidad femenina, la obesidad y las
-alergias.<p>
+alergias.</p>
