--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,12 @@
-<h1>Servicios de Nutrición Clínica y Terapia Nutricional,
-   de Acupuntura y Acupuntura Estética Facial
-   en la tienda ecológica- Eslaveco del Polígono Pisa</h1>
-   <br><br>
+<%= render :partial => "layouts/carousel" %>
+
+<h1 class="home-title"><b>Servicios de Nutrición Clínica y Terapia Nutricional,
+   de Acupuntura y Acupuntura Estética Facial</b></h1>
+
+  <h2 style="text-align: center"> en la tienda ecológica-
+
+   Eslaveco del Polígono Pisa</h2>
+   <br>
+
 <%= image_tag 'functional-med.png', class:"nutricion" %>
 <br><br>
