--- a/app/views/pages/terapia_nut.html.erb
+++ b/app/views/pages/terapia_nut.html.erb
@@ -1,6 +1,6 @@
 
 <h1>Terapia Nutricional</h1>
-<%= image_tag 'nutricion.jpg', class:"nutricion" %>
+<%= image_tag 'nutricion.jpg', class:"nutricion3" %>
 
 <p>La terapia nutricional, una pieza clave de la medicina funcional,
 es el arte y ciencia de la utilización de alimentos, nutrientes y
