--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -46,6 +46,14 @@ h1 {
   margin-top: 160px;
 }
 
+.home-title {
+  // font-family: 'Architects Daughter';
+  font-family: 'Tillana', cursive;
+  color: #5bc0de;
+  margin-top: 160px;
+  text-align: center;
+}
+
 h2 {
   // font-family: 'Architects Daughter';
   font-family: 'Tillana', cursive;
@@ -63,14 +71,17 @@ p {
   font-family: 'Great Vibes', cursive;
 }
 
+// functional med logo on home page
 .nutricion {
-  float: right;
+  float: left;
   // padding-bottom: 100px;
   margin-left: 10px;
   // border-bottom: 100px;
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
-  border-radius: 5%;
+  // border-radius: 5%;
+  height: 45%;
+    width: 45%;
 }
 
 .nutricion2 {
@@ -83,9 +94,19 @@ p {
   // border-radius: 5%;
   height: 45%;
     width: 45%;
-
 }
-
+// medicina funcional pic
+.nutricion3 {
+  float: right;
+  // padding-bottom: 100px;
+  margin-left: 10px;
+  // border-bottom: 100px;
+  border: 5px  #fff;
+  box-shadow: 10px 10px 5px #888888;
+  border-radius: 5%;
+  height: 45%;
+    width: 45%;
+}
 .style_image6 {
   border: 5px double #3A6028;
   box-shadow: 10px 10px 5px #888888;
@@ -94,7 +115,7 @@ p {
   display: block;
   margin: auto;
   width: 60%;
-  margin-bottom: 500px;
+  margin-bottom: 50px;
 }
 
 .style_image4 {
@@ -137,4 +158,13 @@ p {
     background-color: lightblue;
     opacity: 0.8;
   }
+}
+
+.carousel-inner {
+  width: 50%;
+  float: right;
+  margin-top: 150px;
+  margin-left: 30px;
+  margin-bottom: 100px;
+  box-shadow: 10px 10px 5px #888888;
 }
