--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -1,56 +1,56 @@
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
+  <!-- <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
     <li data-target="#myCarousel" data-slide-to="3"></li>
-  </ol>
+  </ol> -->
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
 
     <div class="item active">
-      <%= image_tag("img1.jpg") %>
+      <%= image_tag("Pic4.jpeg") %>
       <div class="carousel-caption">
-        <h3>Chania</h3>
-        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        <h3></h3>
+        <p></p>
       </div>
     </div>
 
     <div class="item">
-    <%= image_tag("img1.jpg") %>
+    <%= image_tag("Pic7.jpg") %>
       <div class="carousel-caption">
-        <h3>Chania</h3>
-        <p>The atmosphere in Chania has a touch of Florence and Venice.</p>
+        <h3></h3>
+        <p></p>
       </div>
     </div>
 
-    <div class="item">
-      <%= image_tag("img1.jpg") %>
+    <!-- <div class="item">
+      <%= image_tag("Pic3.jpg") %>
       <div class="carousel-caption">
         <h3>Flowers</h3>
         <p>Beautiful flowers in Kolymbari, Crete.</p>
       </div>
-    </div>
+    </div> -->
 
     <div class="item">
-      <%= image_tag("img1.jpg") %>
+      <%= image_tag("Pic6.jpg") %>
       <div class="carousel-caption">
-        <h3>Flowers</h3>
-        <p>Beautiful flowers in Kolymbari, Crete.</p>
+        <h3></h3>
+        <p></p>
       </div>
     </div>
 
   </div>
 
   <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+  <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
-  </a>
+  </a> -->
 </div>
