precompile assets for heroku

--- a/app/views/pages/acupuntura_est.html.erb
+++ b/app/views/pages/acupuntura_est.html.erb
@@ -1,4 +1,4 @@
-<h1 class="off">Acupuntura Estética</h1><br>
+<h1>Acupuntura Estética</h1><br>
 
   <p>La acupuntura cosmética rejuvenecedor facial o el tratamiento anti age
   con acupuntura es una terapia segura,
