change name of pic 4 to jpg

--- a/app/views/layouts/_carousel.html.erb
+++ b/app/views/layouts/_carousel.html.erb
@@ -11,7 +11,7 @@
   <div class="carousel-inner" role="listbox">
 
     <div class="item active">
-      <%= image_tag("Pic4.jpeg") %>
+      <%= image_tag("Pic4.jpg") %>
       <div class="carousel-caption">
         <h3></h3>
         <p></p>
