--- a/app/views/formularios/show.html.erb
+++ b/app/views/formularios/show.html.erb
@@ -417,7 +417,7 @@ TOBACCO & ALCOL<br><br>
           <td>Pescado blanco</td>
           <td><%= @formulario.pescado_blanco %></td>
           <td>Porciones de Fruta</td>
-          <td>></td>
+          <td><%= @formulario.fruta %></td>
         </tr>
         <tr>
           <td>Pescado azul</td>
