--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
     <%= csrf_meta_tags %>
 
-    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Great+Vibes" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Great+Vibes|Forum|Patrick+Hand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
   </head>
   <body>
