--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -20,7 +20,7 @@ background: linear-gradient(to right, rgba(185,185,185,1), rgba(197,197,197,1), 
 }
 
 main {
-  background-image:image-url('gotita-flip.png');
+  background-image:image-url('gotita-flip2.png');
   background-size: 100% auto;
   background-position: 0 0px;
   // background-repeat: repeat-x;
@@ -41,29 +41,34 @@ main {
 }
 h1 {
   // font-family: 'Architects Daughter';
-  font-family: 'Tillana', cursive;
+  // font-family: 'Tillana', cursive;
+    // font-family: 'Great Vibes', cursive;
+    font-family: 'Patrick Hand';
   color: #5bc0de;
-  margin-top: 160px;
+  margin-top: 170px;
 }
 
 .home-title {
   // font-family: 'Architects Daughter';
   font-family: 'Tillana', cursive;
   color: #5bc0de;
-  margin-top: 160px;
+  margin-top: 170px;
   text-align: center;
 }
 
 h2 {
   // font-family: 'Architects Daughter';
-  font-family: 'Tillana', cursive;
+  // font-family: 'Tillana', cursive;
+  font-family: 'Patrick Hand';
   color: #5bc0de;
   // margin-top: 130px;
 }
 
 p {
-  font-family: 'Tillana', cursive;
+  // font-family: 'Tillana', cursive;
   // font-family: 'Architects Daughter';
+  // font-family: 'Forum';
+  font-family: 'Patrick Hand';
   font-size: 20px;
 }
 
@@ -75,13 +80,13 @@ p {
 .nutricion {
   float: left;
   // padding-bottom: 100px;
-  margin-left: 10px;
+  margin-left: 100px;
   // border-bottom: 100px;
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
   // border-radius: 5%;
-  height: 45%;
-    width: 45%;
+  height: 30%;
+    width: 30%;
 }
 
 .nutricion2 {
