--- a/app/views/formularios/_form.html.erb
+++ b/app/views/formularios/_form.html.erb
@@ -32,8 +32,18 @@
     <%= f.input :motivos, label: '¿Cuales son tus motivos por acudir a Terapia Nutricional?' %>
     <%= f.input :especialistas, as: :boolean, checked_value: true, unchecked_value: false, label: '¿Has acudido a otros especialistas?' %>
     <%= f.input :intolerancia, label: '¿Tienes alguna intolerancia o alergia alimentaria?' %>
-    <%= f.input :detalles_1 %>
-    <%= f.input :limites, label: '¿Algunos de los siguientes elementos te limitan a la hora de alcanzar tus metas de salud/estilo de vida/ejercicio? ', collection: [ ['Tiempo', '0'], ['Dinero', '1'], ['Entendimiento', '2'], ['Fuerza de voluntad', '3'], ['Apoyo', '4']], as: :check_boxes %>
+    <%= f.input :detalles_1, label: 'Detalles' %>
+
+    <%= f.input :limites,
+    label: '¿Algunos de los siguientes elementos te limitan a la hora de alcanzar tus metas de salud/estilo de vida/ejercicio? ',
+    collection: [
+      ['Tiempo', '0'],
+      ['Dinero', '1'],
+      ['Entendimiento', '2'],
+      ['Fuerza de voluntad', '3'],
+      ['Apoyo', '4'],
+      ['Otro/ninguno', '5']], as: :check_boxes %>
+
     <%= f.input :otro_1, label: 'Otro' %>
 
     <table class="table">
@@ -221,7 +231,7 @@
   </table>
 
 FACTORES-ESTILO DE VIDA
-  <%= f.input :activa,
+  <%= f.input :activa, required: true,
     label: 'Te consideras una persona:',
     collection: [ ['Muy activa  ', '0'],
                 ['Activa', '1'],
@@ -268,7 +278,16 @@ Cual es su consumición media de alcohol (unidades)?<br>
 
 Pon un tic en las Casillas si son aplicables en tu caso, y poner mas detalles en el espacio abajo:
 
-    <%= f.input :alergia1, label: 'Te consideras una persona:', collection: [ ['Historia de alergias en la familia?', '0'], ['Alergia diagnosticada?', '1'], ['Intoleranica diagnosticada?', '2'], ['Has hecho algunas pruebas?', '3'], ['Llevas un EpiPen?', '4'], ['Historia de reacción alergica?', '5']], as: :check_boxes %>
+    <%= f.input :alergia1,
+    label: 'Te consideras una persona:',
+    collection: [
+      ['Historia de alergias en la familia?', '0'],
+      ['Alergia diagnosticada?', '1'],
+      ['Intoleranica diagnosticada?', '2'],
+      ['Has hecho algunas pruebas?', '3'],
+      ['Llevas un EpiPen?', '4'],
+      ['Historia de reacción alergica?', '5']], as: :check_boxes %>
+
     <%= f.input :alergia2, label:'Proporciona mas detalles y enumera cualquier alimento o producto químico que te podría provocar una reacción:'%>
 
     <%= f.input :habitos1, label:'Tienes antoja para algún alimento?' %>
