--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,5 @@
 <h1>Medicina Funcional</h1>
-<%= image_tag("Pic1.jpg", class:"nutricion3") %>
+<%= image_tag("enfermedades.png", class:"nutricion3") %>
 
 <p>El modelo de la Medicina Funcional tiene un enfoque
 individualizado y científico que permite a los pacientes y
