change nav colour

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -8,5 +8,8 @@
    Eslaveco del Polígono Pisa</h2>
    <br>
 <br><br><br>
-<%= image_tag 'functional-med.png', class:"nutricion" %>
+
 <br><br>
+<%= link_to 'https://www.ifm.org/' do %>
+  <%= image_tag 'functional-med.png', class:"nutricion" %>
+<% end %>
