--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -41,9 +41,10 @@ main {
 }
 
 .navbar-inverse {
-  // background-color: #333;
-  background: linear-gradient(to right, blue, pink);
-  border-color: #fff;
+  background-color: #5bc0de;
+  // background: linear-gradient(to right, blue, pink);
+  border-color: #2BB0A3;
+  // #0067af
 }
 
 .navbar-inverse .navbar-nav > li > a  {
