--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,7 +27,8 @@ main {
   // background: linear-gradient(blue, pink);
   background-color: transparent;
   // background:rgba(199,199,199,1);
-  margin-top: 51px;
+  // margin-top: 51px;
+  margin-top: 0px;
   padding-left: 200px;
   padding-right: 200px;
   border-top: 200px;
@@ -41,17 +42,45 @@ main {
 }
 
 .navbar-inverse {
-  background-color: #5bc0de;
+  // background-color: #5bc0de;
+  background-color: transparent;
   // background: linear-gradient(to right, blue, pink);
-  border-color: #2BB0A3;
+  border-color: transparent;
   // #0067af
+    position: absolute;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+    border-radius: 0;
+    top: 0;
+    border-width: 0 0 1px;
 }
 
 .navbar-inverse .navbar-nav > li > a  {
-  color: #efeef3;
+  color: #65a7b7;
+  // color: #a07070;
+  // color: #308792;
   font-family: 'Tillana', cursive;
   font-size: 20px;
+  &:hover {
+    color: lightblue;
+    background-color: transparent;
+  }
 }
+
+.dropdown-menu > li > a {
+  color: #65a7b7;
+  font-family: 'Tillana', cursive;
+    display: block;
+    padding: 3px 20px;
+    clear: both;
+    font-weight: normal;
+    line-height: 1.428571429;
+    color: #333333;
+    white-space: nowrap;
+}
+
+
 
 .navbar-inverse .navbar-nav > .open > a, .navbar-inverse .navbar-nav > .open > a:hover, .navbar-inverse .navbar-nav > .open > a:focus {
   background-color: #3d75ce;
@@ -69,9 +98,18 @@ h1 {
 .home-title {
   // font-family: 'Architects Daughter';
   font-family: 'Tillana', cursive;
-  color: #5bc0de;
+  // color: #5bc0de;
+  color: #a3aebd;
   margin-top: 170px;
   text-align: center;
+}
+
+.home-subtitle {
+  // font-family: 'Architects Daughter';
+  // font-family: 'Tillana', cursive;
+  font-family: 'Patrick Hand';
+  color: #82a97c;
+  // margin-top: 130px;
 }
 
 h2 {
@@ -88,6 +126,7 @@ p {
   // font-family: 'Forum';
   font-family: 'Patrick Hand';
   font-size: 20px;
+  color: grey;
 }
 
 .great-vibes {
