--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -3,7 +3,7 @@
 <h1 class="home-title"><b>Servicios de Nutrición Clínica y Terapia Nutricional,
    de Acupuntura y Acupuntura Estética Facial</b></h1>
 
-  <h2 style="text-align: center"> en la tienda ecológica-
+  <h2 class="home-subtitle" style="text-align: center"> en la tienda ecológica-
 
    Eslaveco del Polígono Pisa</h2>
    <br>
