--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -15,4 +15,4 @@ se centra en las raíces de los desordenes y en los factores
 subyacentes que influyen en la salud. Su enfoque es científico
 y a la vez holístico, considerando elementos de mente/cuerpo,
 factores genéticos e impactos medioambientales como la dieta,
-estilo de vida y ejercicio.</p><br><br><br>
+estilo de vida y ejercicio.</p><br><br><br><br><br><br>
