--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -14,7 +14,7 @@ conocer cualquier condición subyacente actual o pasada ya sea de
 •	Observación, toma de pulsos y palpación de los meridianos.<br>
 •	Diagnóstico clínico de la condición/desorden</p>
 
-<h2>Tarifas</h2>
+<h2>Precios</h2>
 
 <p>Las sesiones necesarias dependen del individuo y del estado de la
 desorden a tratar, no obstante, para la gran mayoría de condiciones
@@ -23,10 +23,8 @@ una sesión, sobre todo a nivel de dolor ya que uno de los mecanismos
 del funcionamiento de la acupuntura es a través de sus propiedades
 sedantes y la liberación de endorfinas.</p>
 
-<h2>Precios</h2>
-
 </table>
-<table class="table table2">
+<table class="table">
       <thead>
         <tr>
           <th>Tratamiento</th>
