--- a/app/views/pages/contacto.html.erb
+++ b/app/views/pages/contacto.html.erb
@@ -8,16 +8,16 @@
 
 
 <address>
-  <strong>Tienda Ecológica Eslaveco</strong><br><br>
-  Parque P.I.S.A, C/Horizonte,<br>
+  <strong><p>Tienda Ecológica Eslaveco</p></strong><br><br>
+  <p>Parque P.I.S.A, C/Horizonte,<br>
   7 – Calle 2, Nave 1,<br>
   Mairena del Aljarafe,<br>
-  41927 Sevilla<br><br>
-  <abbr title="Phone">Tlf: </abbr> 660 503 073
+  41927 Sevilla</p><br><br>
+  <abbr title="Phone"><p>Tlf: </abbr> 660 503 073</p>
 </address>
 
 <address>
   <strong></strong><br>
-  <a href="mailto:#">www.terapianutricional.net</a>
+  <a href="mailto:#"><p>www.terapianutricional.net</p></a>
 </address>
 <br>
