--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -91,7 +91,9 @@ h1 {
   // font-family: 'Tillana', cursive;
     // font-family: 'Great Vibes', cursive;
     font-family: 'Patrick Hand';
-  color: #5bc0de;
+  // color: #5bc0de;
+  // color: #5bc0de;
+  color: #65a7b7;
   margin-top: 170px;
 }
 
@@ -116,7 +118,8 @@ h2 {
   // font-family: 'Architects Daughter';
   // font-family: 'Tillana', cursive;
   font-family: 'Patrick Hand';
-  color: #5bc0de;
+  // color: #5bc0de;
+  color: #65a7b7;
   // margin-top: 130px;
 }
 
