--- a/app/views/pages/acupuntura_est.html.erb
+++ b/app/views/pages/acupuntura_est.html.erb
@@ -1,17 +1,17 @@
 <h1>Acupuntura Estética</h1><br>
 
-  <p>La acupuntura cosmética rejuvenecedor facial o el tratamiento anti age
+  <p>La acupuntura estética rejuvenecedor facial o el tratamiento anti age
   con acupuntura es una terapia segura,
   efectiva y milenaria diseñada para ayudar a que el organismo mejore
   la apariencia y se sienta más joven, mientras que se reducen los
   signos de envejecimiento. Este tratamiento promueve una apariencia
   más joven y vital dado que estimula la producción de
-  colágeno elastina
+  colágeno y elastina
    natural, además de favorecer la circulación y mejorar la elasticidad de la dermis.
-   La acupuntura cosmética surge de los principios y fundamentos de la medicina oriental.
+   La acupuntura estética surge de los principios y fundamentos de la medicina oriental.
    Al igual que en la acupuntura tradicional, la acupuntura cosmética implementa la
    diagnosis diferencial y el uso de agujas para mover o equilibrar el chi, la sangre,
-   y líquidos dentro del organismo, además restaurar y mantener la harmonía global.</p>
+   y los líquidos dentro del organismo, además de restaurar y mantener la harmonía global.</p>
 
 <%= image_tag("face_points.jpg", :class => "style_image4") %>
 
