--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -24,7 +24,58 @@ ensayos clínicos.</p>
 <p>Entre las condiciones que se indican en los informes
 figuran:</p><br><br>
 
-<%=image_tag("sintomas.png", :class => "style_image6") %>
+<!-- <%=image_tag("sintomas.png", :class => "style_image6") %> -->
+</table>
+<table class="table ">
+
+      <thead>
+        <tr>
+          <th></th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+          <td>Artritis reumatoide</td>
+        <td>Depresión</td>
+        </tr>
+        <tr>
+          <td>Dolor de cabeza</td>
+        <td>Nauseas y vomitos</td>
+        </tr>
+        <tr>
+          <td>Dolor Lumbar</td>
+        <td>Hipotensión y Hipertensión</td>
+        </tr>
+        <tr>
+          <td>Dolor cervical/del cuello</td>
+        <td>Dismenorrea</td>
+        </tr>
+        <tr>
+          <td>Ciática</td>
+        <td>Rinitis</td>
+        </tr>
+        <tr>
+          <td>Esguince</td>
+        <td>Patologías del sistema digestivo</td>
+        </tr>
+        <tr>
+          <td>Codo de tenista</td>
+        <td>Cólico renal</td>
+        </tr>
+        <tr>
+          <td>Problemas del hombro</td>
+        <td>Patologías de las vías respiratorias </td>
+        </tr>
+        <tr>
+          <td></td>
+        <td></td>
+        </tr>
+      <tbody>
+</table>
+
+
 <br>
 
 <b><p>La acupuntura tiene excelentes resultados tratando desórdenes y dolores
