--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -54,7 +54,7 @@ sanguíneos lo cual suele provocar molestia. </p>
 tienen absolutamente nada que ver con aquellas agujas. Son muy pequeñas
 y finas, más finas que un cabello y apenas se notan durante su inserción </p>
 
-<h2>Factores a Tener en Cuenta</h2>
+<!-- <h2>Factores a Tener en Cuenta</h2>
 <p>
 • <b>Para la acupuntura cosmética se recomienda acudir a la cita con
   poco maquillaje, en caso de
@@ -78,4 +78,4 @@ y finas, más finas que un cabello y apenas se notan durante su inserción </p>
 •	Personas que hayan tomado anticoagulantes<br>
 •	Problemas con la glándula pituitaria<br>
 •	Tumores Malignos<br>
-•	Epilepsia<br></p>
+•	Epilepsia<br></p> -->
