--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
 <%= render :partial => "layouts/carousel" %>
 
 <h1 class="home-title"><b>Servicios de Nutrición Clínica y Terapia Nutricional,
-   de Acupuntura y Acupuntura Estética Facial</b></h1>
+   de Acupuntura General y Acupuntura Estética Facial</b></h1>
 
   <h2 class="home-subtitle" style="text-align: center"> en la tienda ecológica-
 
