--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Architects+Daughter|Great+Vibes|Forum|Patrick+Hand" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Tillana" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Crimson+Text" rel="stylesheet">
   </head>
   <body>
     <header>
