--- a/app/views/pages/consulta.html.erb
+++ b/app/views/pages/consulta.html.erb
@@ -19,6 +19,10 @@ para mantenerte con salud óptimo durante el resto de tu vida.</p>
 incluye preguntas acerca de tu historial de salud, tu dieta
 actual, medicamentos y estilo de vida. Habrá que entregarlo
 24 horas antes de la cita</p>
+<%= image_tag("Arbol1.jpg", class:"nutricion3") %>
+<!-- <div class='tree-quote'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
+</div> -->
+
 
 
 <h2>Primera Consulta</h2>
