--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -174,6 +174,8 @@ p {
   height: 45%;
     width: 45%;
 }
+
+
 .style_image6 {
   border: 5px double #3A6028;
   box-shadow: 10px 10px 5px #888888;
@@ -233,4 +235,43 @@ p {
   margin-left: 30px;
   margin-bottom: 100px;
   box-shadow: 10px 10px 5px #888888;
+}
+
+.quote {
+  float: right;
+  text-align: center;
+  width: 150px;
+    // border: 5px solid green;
+    padding: 25px;
+    margin: 25px;
+    margin-top: 500px;
+      font-family: 'Patrick Hand';
+      font-size: 26px;
+}
+.tree {
+  display: block;
+   margin-left: auto;
+   margin-right: auto;
+   margin-bottom: 50px;
+  // padding-bottom: 100px;
+  // margin-left: 10px;
+  // border-bottom: 100px;
+  border: 5px  #fff;
+  box-shadow: 10px 10px 5px #888888;
+  border-radius: 5%;
+  height: 60%;
+    width: 60%;
+}
+
+.tree-quote {
+  // width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  font-family: 'Patrick Hand';
+  // float: left;
+  font-size: 26px;
+  text-align: center;
+
+  // margin-right: 600px;
 }
