--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,8 @@
+<!-- <% provide(:quote, ' ' )%> -->
+
 <h1>Medicina Funcional</h1>
-<%= image_tag("enfermedades.png", class:"nutricion3") %>
+
+<!-- <%= image_tag("enfermedades.png", class:"nutricion3") %> -->
 
 <p>El modelo de la Medicina Funcional tiene un enfoque
 individualizado y científico que permite a los pacientes y
@@ -8,11 +11,20 @@ subyacentes de las desordenes y enfermedades para promocionar
 un optimo bienestar. Requiere un entendimiento detallado de
 la genética, bioquímica, y factores de estilo de vida de cada
 individuo y estudia estos datos para movilizar planes de
-tratamiento personalizados que conducen a resultados óptimos.
-<br><br>
-A diferencia de la medicina convencional, La medicina funcional
+tratamiento personalizados que conducen a resultados óptimos.</p>
+
+
+
+<p>A diferencia de la medicina convencional, La medicina funcional
 se centra en las raíces de los desordenes y en los factores
 subyacentes que influyen en la salud. Su enfoque es científico
 y a la vez holístico, considerando elementos de mente/cuerpo,
 factores genéticos e impactos medioambientales como la dieta,
-estilo de vida y ejercicio.</p><br><br><br><br><br><br>
+estilo de vida y ejercicio.</p>
+
+<div class='tree-quote'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
+</div>
+<%= image_tag("Arbol-IFM.jpg", class:"tree") %>
+
+
+<br><br><br><br><br><br>
