--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -248,6 +248,35 @@ p {
       font-family: 'Patrick Hand';
       font-size: 26px;
 }
+
+.quote1 {
+  font-family: 'Patrick Hand';
+  font-size: 40px;
+    float: right;
+      width: 300px;
+      margin-right: 100px;
+      text-align: center;
+        color: #65a7b7;
+}
+
+.quote2 {
+  font-family: 'Patrick Hand';
+  font-size: 34px;
+  width: 600px;
+  margin: auto;
+  text-align: center;
+  color: #65a7b7;
+}
+
+.quote3 {
+  font-family: 'Patrick Hand';
+  font-size: 34px;
+  width: 1000px;
+  margin: auto;
+  text-align: center;
+  color: #65a7b7;
+}
+
 .tree {
   display: block;
    margin-left: auto;
