--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -13,7 +13,8 @@ la genética, bioquímica, y factores de estilo de vida de cada
 individuo y estudia estos datos para movilizar planes de
 tratamiento personalizados que conducen a resultados óptimos.</p>
 
-
+<div class='quote2'>LA MEDICINA FUNCIONAL ES LA CIENCIA DE CREAR SALUD Y UNA VEZ CREADA LA SALUD, LA ENFERMEDAD DESAPARECE POR SI SOLA COMO EFECTO SECUNDARIO
+</div><br><br>
 
 <p>A diferencia de la medicina convencional, La medicina funcional
 se centra en las raíces de los desordenes y en los factores
@@ -21,9 +22,9 @@ subyacentes que influyen en la salud. Su enfoque es científico
 y a la vez holístico, considerando elementos de mente/cuerpo,
 factores genéticos e impactos medioambientales como la dieta,
 estilo de vida y ejercicio.</p>
-
-<div class='tree-quote'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
-</div>
+<br>
+<div class='quote3'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
+</div><br><br>
 <%= image_tag("Arbol-IFM.jpg", class:"tree") %>
 
 
