--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -1,4 +1,4 @@
-<h1>Acupuntura General</h1><br>
+<h1>Acupuntura Tradicional</h1><br>
 
 <p>La acupuntura es una terapia ampliamente utilizada en todo el mundo;
 aunque su desarrollo inicial se sitúa en oriente hace más de dos mil
