--- a/app/views/pages/consulta.html.erb
+++ b/app/views/pages/consulta.html.erb
@@ -14,12 +14,13 @@ Dependiendo de tus objetivos de salud, este proceso puede
 durar hasta 2 o 3 meses pero proporcionará las herramientas
 para mantenerte con salud óptimo durante el resto de tu vida.</p>
 
+
 <p>Antes de la cita tendrás que rellenar un
 <%= link_to 'cuestionario', new_formulario_path %>, éste
 incluye preguntas acerca de tu historial de salud, tu dieta
 actual, medicamentos y estilo de vida. Habrá que entregarlo
 24 horas antes de la cita</p>
-<%= image_tag("Arbol1.jpg", class:"nutricion3") %>
+<!-- <%= image_tag("Arbol1.jpg", class:"nutricion3") %> -->
 <!-- <div class='tree-quote'> El ENFOQUE DE LA MEDICINA CONVENCIONAL ES EN LAS HOJAS Y RAMAS DEL ÁRBOL (MANIFESTACIONES DE ENFERMEDAD), LA MEDICINA FUNCIONAL PONE ENFASIS EN LAS CAUSAS/RAICES (LOS FACTORES SUBYACENTES QUE CONDUCEN A LA MANIFESTACIÓN DE LA ENFERMEDAD)
 </div> -->
 
