--- a/app/views/pages/consulta_acu.html.erb
+++ b/app/views/pages/consulta_acu.html.erb
@@ -54,28 +54,28 @@ sanguíneos lo cual suele provocar molestia. </p>
 tienen absolutamente nada que ver con aquellas agujas. Son muy pequeñas
 y finas, más finas que un cabello y apenas se notan durante su inserción </p>
 
-<!-- <h2>Factores a Tener en Cuenta</h2>
+<h2>Factores a Tener en Cuenta</h2>
 <p>
-• <b>Para la acupuntura cosmética se recomienda acudir a la cita con
+<!-- • -->
+<b>Para la acupuntura cosmética se recomienda acudir a la cita con
   poco maquillaje, en caso de
   ser posible, ya que será necesario limpiar la zona del rostro y
   cuello antes de iniciar el tratamiento. </b><br>
 <br>
-• <b>Se puede recibir acupuntura aunque este tomando medicamentos.</b> <br>
-<br>
-• <b>Se recomienda esperar un periodo de dos meses antes de recibir
+<b>Se puede recibir acupuntura aunque este tomando medicamentos.</b> <br>
+<br><b>Se recomienda esperar un periodo de dos meses antes de recibir
   acupuntura después de acudir a métodos como el bótox, rellenos,
   peelings químicos, cirugía...</b> <br><br>
 
 <h2>Contraindicaciones</h2><br>
 <p>No se recomienda la acupuntura en casos de:<br><br>
 
-• Migrañas fuertes y continuas<br>
-• Embarazos<br>
-• Hemofilia<br>
-• Presión arterial muy alta<br>
-•	Personas que tengan puesto un marcapasos en el corazón<br>
-•	Personas que hayan tomado anticoagulantes<br>
-•	Problemas con la glándula pituitaria<br>
-•	Tumores Malignos<br>
-•	Epilepsia<br></p> -->
+Migrañas fuertes y continuas<br>
+Embarazos<br>
+Hemofilia<br>
+Presión arterial muy alta<br>
+Personas que tengan puesto un marcapasos en el corazón<br>
+Personas que hayan tomado anticoagulantes<br>
+Problemas con la glándula pituitaria<br>
+Tumores Malignos<br>
+Epilepsia<br></p>
