--- a/app/views/pages/terapia_nut.html.erb
+++ b/app/views/pages/terapia_nut.html.erb
@@ -23,3 +23,5 @@ mejor forma de comer para ti, como individuo.
   <li><p>Nutrición Deportiva</li>
   <li><p>Coaching Nutricional/Salud</li>
 </ul>
+
+<div class='quote1'>La nutrición es la medicina mas poderosa que existe</div>
