--- a/app/views/pages/acupuntura_gen.html.erb
+++ b/app/views/pages/acupuntura_gen.html.erb
@@ -1,5 +1,5 @@
 <h1>Acupuntura Tradicional</h1><br>
-
+<%=image_tag("back2.png", class:"nutricion3") %>
 <p>La acupuntura es una terapia ampliamente utilizada en todo el mundo;
 aunque su desarrollo inicial se sitúa en oriente hace más de dos mil
 años, hoy en día está introducida en casi todos los sistemas sanitarios
