--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -167,6 +167,7 @@ p {
   float: right;
   // padding-bottom: 100px;
   margin-left: 10px;
+  margin-bottom: 20px;
   // border-bottom: 100px;
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
@@ -271,7 +272,7 @@ p {
 .quote3 {
   font-family: 'Patrick Hand';
   font-size: 34px;
-  width: 1000px;
+  // width: 1000px;
   margin: auto;
   text-align: center;
   color: #65a7b7;
@@ -288,8 +289,8 @@ p {
   border: 5px  #fff;
   box-shadow: 10px 10px 5px #888888;
   border-radius: 5%;
-  height: 60%;
-    width: 60%;
+  height: 80%;
+    width: 80%;
 }
 
 .tree-quote {
