--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -11,7 +11,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Acupuntura<span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><%= link_to 'Acupuntura', page_path('acupuntura_gen') %></li>
+            <li><%= link_to 'Acupuntura Tradicional', page_path('acupuntura_gen') %></li>
             <li><%= link_to 'Acupuntura Estética Facial?', page_path('acupuntura_est') %></li>
           </ul>
         </li>
@@ -20,7 +20,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Consulta<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Terapia Nutricional', page_path('consulta') %></li>
-            <li><%= link_to 'Acupuntura', page_path('consulta_acu') %></li>
+            <li><%= link_to 'Acupuntura Tradicional', page_path('consulta_acu') %></li>
             <li><%= link_to 'Acupuntura Estética', page_path('consulta_est') %></li>
             <li><%= link_to 'Combinada (Terapia Nutricional y Acupuntura)', page_path('consulta_com') %></li>
           </ul>
@@ -29,6 +29,7 @@
 <li></li>
 <li></li>
 <li><%= link_to 'Precios', page_path('precios') %></li>
+<li><%= link_to 'Sobre Mi', page_path('sobre') %></li>
 <li><%= link_to 'Contacto', page_path('contacto') %></li>
 
 <% if user_signed_in? %>
