precompile sobre-mi-b&w

--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -1,6 +1,6 @@
 <h1>Sobre Mi</h1>
 
-<%=image_tag("sobre mi(b&w)", class:"nutricion3") %>
+<%=image_tag("sobre-mi-b&w.jpg", class:"nutricion3") %>
 
 <p>Licenciado por la Universidad de Dublín (UCD) en idiomas en 1999, y traductor e
 intérprete de profesión hasta que por una lesión crónica decidí cambiar
