change margin of main to percentage for responsive design

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -34,7 +34,7 @@ img {
 // apply styles to HTML elements
 // to make views framework-neutral
 main {
-  @extend .container;
+  @extend .container-fluid;
   background-color: #eee;
   padding-bottom: 80px;
   padding-left: 80px;
