--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,8 +29,8 @@ main {
   // background:rgba(199,199,199,1);
   // margin-top: 51px;
   margin-top: 0px;
-  padding-left: 200px;
-  padding-right: 200px;
+  padding-left: 15%;
+  padding-right: 15%;
   border-top: 200px;
 }
 
