fix width of quote 2

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -263,7 +263,7 @@ p {
 .quote2 {
   font-family: 'Patrick Hand';
   font-size: 34px;
-  width: 600px;
+  // width: 600px;
   margin: auto;
   text-align: center;
   color: #65a7b7;
