--- a/app/views/pages/sobre.html.erb
+++ b/app/views/pages/sobre.html.erb
@@ -2,27 +2,27 @@
 
 <%=image_tag("sobre-mi-b&w.jpg", class:"nutricion3") %>
 
-<p>Licenciado por la Universidad de Dublín (UCD) en idiomas en 1999, y traductor e
-intérprete de profesión hasta que por una lesión crónica decidí cambiar
-el   rumbo   de   mi   vida.   Embarqué   el   cambio   estudiando   un   Masters   (MOst)   en
-Osteopatía en la reconocida 'European School of Osteopathy' de Londres - un curso
-universitario   basado   en   la   biomecánica   humana   y   en   la   corrección   del   sistema
-músculo-esquelético,   visceral   y   craneal.   Es   entonces   cuando   empecé   a   utilizar
-agujas   por   primera   vez,   en   la   técnica   conocida   como   punción   seca–   la   cual   se
-diferencia   a   la   acupuntura   tradicional   porque   no   se   basa   en   el   sistema   de   los
-meridianos   de   la   MTC   sino   que   se   estimulan     zonas   locales   de   dolor   o   puntos
-gatillos.</p>
+
+<p>Soy Neil McGrath, originario de Irlanda pero llevo 20 años viviendo en Sevilla.
+Me licencié por la Universidad de Dublín (UCD) en idiomas en 1999.
+Trabajé como traductor e intérprete hasta que por una lesión
+crónica decidí cambiar el rumbo de mi vida.</p>
+
+
+
+<p>Embarqué el cambio estudiando un Masters (MOst) en Osteopatía
+ en la reconocida 'European School of Osteopathy' de Londres.
+Es entonces cuando empecé a utilizar agujas por primera vez para
+tratar dolores músculo-esqueléticos.</p>
+
+
 <p>
-Posteriormente   decidí   ampliar   mis   conocimientos   terapéuticos   estudiando
-acupuntura y medicina tradicional china. Me gradué en MTC y  Acupuntura  tanto
-aquí en España (Escuela Hylé), como en Irlanda (Escuela de shanghai de Irlanda,
-especializada en acupuntura cosmética).</p>
-</p>
+Esto me llevó a ampliar mis conocimientos terapéuticos estudiando
+ Acupuntura y Medicina tradicional china. Me gradué en MTC y
+  Acupuntura tanto aquí en España, como en Irlanda.</p>
 <p>
-En   la   actualidad   estoy   finalizando   un   Masters   en   Nutrición   Personalizada   en   la
-renombrada Escuela CNELM- el cual es otorgado por la Universidad de Middlesex,
-Londres.  Como asociada y miembro del Instituto de Medicina Funcional, la filosofía
-y enfoque se basan en estudios científcos y personalizados de las causas de las
-enfermedades,   en   vez   de   solo   tratar   los  síntomas.   Hoy   en   día   la   medicina   y   la
-nutrición funcional están revolucionando el concepto de la salud y de la medicina
-convencional.</p>
+Posteriormente, he realizado un Masters en Nutrición Personalizada
+por CNELM (Universidad de Middlesex, Londres), referente a nivel
+ mundial en Nutrición Clínica y Terapia Nutricional, y afiliada
+ al Instituto de Medicina Funcional.</p>
+<br><br>
